syntax = "proto3";
package CreatePeople;

option csharp_namespace = "GrpcStreamingDemo.Proto.CreatePeople";

service CreatePeople {
  rpc CreatePeople(CreatePeopleRequest) returns (CreatePeopleResponse);
}

message CreatePeopleRequest {
  int32 how_many = 1;
}

message CreatePeopleResponse {
  repeated Person people = 1;
}

message Person {
  string first_name = 1;
  string last_name = 2;
}