syntax = "proto3";
import "google/protobuf/empty.proto";
package FileDownload;

option csharp_namespace = "GrpcStreamingDemo.Proto.FileDownload";

service FileDownload {
  rpc ListFiles(google.protobuf.Empty) returns (ListFilesResponse);
  rpc Download(DownloadRequest) returns (stream Chunk);
}

message ListFilesResponse {
  repeated Header header = 1;
}

message DownloadRequest {
  repeated string files = 1;
}

message Chunk {
  oneof ChunkType {
    Header header = 1;
    Progress progress = 2;
    Data data = 3;
  }
}

message Header {
  string file_name = 1;
  int64 bytes = 2;
}

message Progress {
  int64 bytes_sent_total = 1;
  int64 bytes_remaining = 2;
  bool complete = 3;
}

message Data {
  bytes payload = 1;
}